--- a/src/app.html
+++ b/src/app.html
@@ -4,9 +4,12 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
 		%svelte.head%
 	</head>
-	<body>
+	<body class="bg-gray-900">
 		<div id="svelte">%svelte.body%</div>
 	</body>
 </html>
